# blog-assets

./: .gitignore
Iceberg-Dremio-Nessie/: docker-compose.yml
SQL ML Code/: demo-1.py  tutorial.sql
adv-GitOps-strategies/: README.md  build-latest.yml  deploy-latest.yml  docker-compose.yaml
ai_ml_object_management/: om.ipynb
aistor-tables-dremio/: .env.example  .gitignore  README.md  blog-dremio-aistor-tables.md  docker-compose.yaml  dremio_tpcdc_yaml
apache-iceberg-summit-2026-workshop/: .gitignore  AGENTS.md  Makefile  QUICKSTART.md  README.md  docker-compose.yaml  opencode-prompts.md  requirements.txt  setup.py
aws_s3checkpointing/: mnist.py  mnist_loaders.py  mnist_models.py  s3_checkpointing.ipynb  training_base.py
aws_s3iterable/: custom_iterable_dataset.py  data_utilities.py  mnist.py  mnist_loaders.py  mnist_models.py  requirements.txt  sample.env
aws_s3map/: data_utilities.py  mnist.py  torch_utilities.py
cockroach-db/: docker-compose.yml
docker_to_localhost/: README.md  docker-compose.yaml  dockerfile
duckdb_modern_data_stack/: duck_explore.py
embedding_subsystem/: embedding_script.ipynb  embedding_subsystem.ipynb  embedding_utils.py  minio.env  readme.md  requirements.txt
feature_extraction/: transfer_learning_feature_extraction.ipynb
fine_tuning/: transfer_learning_fine_tuning.ipynb  utils.py
flask-pydantic-event-notifications/: Dockerfile
flask-webhook-event-notifications/: Dockerfile  docker-compose.yaml  event-test.txt
gaudi/: data_utilities.py  minio.env  mnist.py  (+1 more)
rl-with-aihub/: README.md  main.py  pyproject.toml
(+349 files in other folders)
